k8s/gateway/30-httproute-canary.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: canary
  namespace: demo
spec:
  parentRefs:
  - name: web-gw
  hostnames:
  - canary.local
  rules:
  - backendRefs:
    - name: web
      port: 80
      weight: 90
    - name: web-v2
      port: 80
      weight: 10
